# Bevy_Tool

./: .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  checklist_workflow.md  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  epic.yml  feature_request.yml  tech_debt.yml
.github/workflows/: ci.yml
apps/editor/: Cargo.toml
apps/editor/src/: main.rs
crates/editor_core/: Cargo.toml
crates/editor_core/src/: autosave.rs  command_registry.rs  commands.rs  editor_state.rs  lib.rs  log_capture.rs  prefs.rs  project.rs  selection.rs  tools.rs
crates/editor_core/src/project/: create.rs  helpers.rs  mod.rs  open.rs
crates/editor_ui/: Cargo.toml
crates/editor_ui/src/: lib.rs  panels.rs  selection.rs  viewport_overlays.rs
crates/editor_ui/src/panels/: command_palette.rs  layout.rs  logs.rs  project.rs  viewport.rs  viewport_controls.rs  viewport_overlay_hud.rs  viewport_overlay_options.rs
crates/editor_ui/src/panels/project/: helpers.rs  mod.rs  state.rs
crates/editor_ui/src/panels/project/ui/: active.rs  create.rs  mod.rs  open.rs  recent.rs
crates/exporter/: Cargo.toml
crates/exporter/src/: lib.rs
crates/foundation/: Cargo.toml
crates/foundation/src/: ids.rs  lib.rs
crates/preview/: Cargo.toml
crates/preview/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs  streaming.rs
crates/shader_sandbox/: CHECKLIST.md  Cargo.toml
crates/shader_sandbox/examples/: preview.rs
crates/shader_sandbox/src/: lib.rs  material.rs  mvp.rs  pipeline.rs  preview.rs  render_graph.rs
crates/shader_sandbox/src/shaders/: water_material.wgsl
crates/viewport/: Cargo.toml
crates/viewport/src/: camera.rs  coords.rs  cursor.rs  debug.rs  grid.rs  input.rs  lib.rs  overlays.rs  props.rs  service.rs  spatial_overlays.rs
crates/viewport/src/camera/: math.rs
crates/world/: Cargo.toml
crates/world/src/: lib.rs  migrations.rs  schema.rs  storage.rs  validator.rs
crates/world/src/storage/: liquids.rs  manifest.rs  mod.rs  props.rs  quarantine.rs  terrain.rs  tile_meta.rs
crates/world/src/tile_container/: format.rs  mod.rs  reader.rs  sections.rs  world_spec_hash.rs  writer.rs
crates/world/src/tile_container/sections/: hmap.rs  liqd.rs  meta.rs  mod.rs  prop.rs  strings.rs  wmap.rs
crates/world/src/validator/: mod.rs  world.rs
crates/world/src/validator/tile/: checks.rs  directory.rs  mod.rs  sections.rs
crates/world/tests/: storage_roundtrip.rs  tile_container.rs  tile_container_reader.rs  tile_container_roundtrip.rs  tile_container_validator.rs
crates/world/tests/fixtures/min_project/: project.toml
crates/world/tests/fixtures/min_project/worlds/world_0/: world.toml
docs/: ARCHITECTURE.md  CONTROLS.md  ENGINE_BASELINE.md  GITHUB_LABELS.md  ISSUE_PACK.md  PRODUCT.md  QUALITY_BAR.md  ROADMAP.md  TILE_CONTAINER_FORMAT.md  TILE_CONTAINER_SECTIONS.md  TILE_CONTAINER_VALIDATION.md  TILE_CONTAINER_WORLD_SPEC_HASH.md  WORLD_FORMAT.md  WORLD_SPEC.md
docs/checklists/: 00_product.md  01_repo_and_engine.md  01_repo_engine.md  02_5_tile_container_format.md  02_world_schema.md  03_editor_shell.md  04_viewport.md  04_viewport_foundation.md  05_terrain.md  05_terrain_v1.md  06_liquids.md  06_liquids_v1.md  07_streaming.md  07_streaming_v1.md  08_props.md  08_props_v1.md  09_materials.md  09_weightmaps_v1.md  10_splines.md  10_splines_and_stamps.md  11_export_and_preview.md  11_export_preview.md  12_performance.md  13_reliability.md  14_packaging.md  15_multi_tool.md
