[workspace]
resolver = "2"
members = [
  "apps/editor",
  "crates/foundation",
  "crates/world",
  "crates/runtime",
  "crates/editor_core",
  "crates/editor_ui",
  "crates/exporter",
  "crates/preview",
  "crates/shader_sandbox",
  "crates/viewport",
]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
bevy = "0.18"
bevy_egui = "0.39"
egui_dock = "0.18"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -2 }
# Allow some noisy pedantic lints in early stages; tighten later.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
