[package]
name = "editor_core"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
bevy = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }

foundation = { path = "../foundation" }
world = { path = "../world" }
runtime = { path = "../runtime" }

[features]
default = []
dev = []
profiling = []
