[package]
name = "editor_ui"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
egui_dock = { workspace = true }
rfd = { workspace = true }

editor_core = { path = "../editor_core" }

[features]
default = []
dev = []
