[package]
name = "editor_ui"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
egui_dock = { workspace = true, features = ["serde"] }
rfd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

editor_core = { path = "../editor_core" }
viewport = { path = "../viewport" }
world = { path = "../world" }

[features]
default = []
dev = []
