[package]
name = "world"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
foundation = { path = "../foundation" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
